name:                ParseSymbols
version:             0.1.0.0
synopsis:            Parse compiler symbols into JSON
description:         Please see README.md
license:             OtherLicense
Author:              Nick Ager
Maintainer:          Nick Ager
build-type:          Custom
cabal-version:       >=1.10

executable ParseSymbols
  hs-source-dirs:      .
  main-is:             ParseSymbols.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is ParseSymbols
  build-depends:
                       base,
                       parsec,
                       aeson,
                       bytestring
  default-language:    Haskell2010

test-suite ParseSymbolsSpec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      .
  main-is:             ParseSymbolsSpec.hs
  build-depends:       base,
                       hspec,
                       QuickCheck,
                       parsec,
                       aeson,
                       bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
